# gscrib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: python-package.yml  python-publish.yml
docs/: conf.py  dev-guide.md  index.rst  license.md  quick-reference.md  requirements.txt  user-guide.md
docs/_static/: custom.css
docs/_templates/: module.rst
docs/guides/: dev-guide.md  user-guide.md
examples/: grid_holes.gcode  grid_holes.py  probe_bed.py
gscrib/: __init__.py  config.py  gcode_builder.py  gcode_core.py  gcode_state.py  point.py  trace_path.py
gscrib/codes/: gcode_mappings.py  gcode_table.py
gscrib/enums/: __init__.py
gscrib/enums/types/: __init__.py  direction.py  distance_mode.py  halt_mode.py  plane.py  spin_mode.py
gscrib/enums/units/: length_units.py  time_units.py
gscrib/excepts/: __init__.py  gscrib_errors.py
gscrib/formatters/: base_formatter.py  default_formatter.py
gscrib/geometry/: __init__.py  bounds.py  patterns.py  point.py  tracer.py  transform.py  transformer.py
gscrib/heightmaps/: __init__.py  base_heightmap.py  flat_heightmap.py  raster_heightmap.py  sparse_heightmap.py
gscrib/hooks/: __init__.py  extrusion_hook.py  heightmap_hook.py
gscrib/host/: __init__.py  base_device.py  connection.py  exceptions.py  gcode_host.py  serial_device.py  socket_device.py
gscrib/host/protocol/: __init__.py  event_dispatcher.py  event_parser.py  events.py  events_map.py
gscrib/host/scheduler/: __init__.py  command.py  command_tracker.py  quota_tracker.py  send_task.py  task_priority.py
gscrib/printrun/: eventhandler.py  printcore.py
gscrib/types/: __init__.py
gscrib/writers/: __init__.py  base_writer.py  console_writer.py  file_writer.py  host_writer.py  log_writer.py  printrun_writer.py  serial_writer.py  socket_writer.py  string_writer.py
src/gscrib/: config.py  gcode_builder.py  gcode_core.py  gcode_state.py
src/gscrib/codes/: gcode_mappings.py  gcode_table.py
src/gscrib/enums/types/: direction.py  distance_mode.py  plane.py  spin_mode.py
src/gscrib/enums/units/: length_units.py  time_units.py
src/gscrib/formatters/: base_formatter.py  default_formatter.py
src/gscrib/geometry/: bounds.py  point.py  tracer.py  transform.py  transformer.py
src/gscrib/hooks/: __init__.py  extrusion_hook.py
src/gscrib/printrun/: device.py  eventhandler.py  gcoder.py  printcore.py
src/gscrib/types/: __init__.py
src/gscrib/writers/: console_writer.py  file_writer.py  log_writer.py  printrun_writer.py  serial_writer.py  socket_writer.py
tests/: test_base_device.py  test_bound_manager.py  test_command.py  test_command_tracker.py  test_connection.py  test_console_writer.py  test_default_formatter.py  test_enums_types.py  test_event_dispatcher.py  test_event_parser.py  test_file_writer.py  test_flat_heightmap.py  test_gcode_builder.py  test_gcode_config.py  test_gcode_core.py  test_gcode_entry.py  test_gcode_host.py  test_gcode_state.py  test_gcode_table.py  test_heightmap_hook.py  test_host_writer.py  test_log_writer.py  test_move_handlers.py  test_move_hooks.py  test_patterns.py  test_point.py  test_printrun_core.py  test_printrun_device.py  test_printrun_writer.py  test_quota_tracker.py  test_raster_heightmap.py  test_serial_device.py  test_serial_writer.py  test_socket_device.py  test_socket_writer.py  test_sparse_heightmap.py  test_string_writer.py  test_trace_path.py  test_tracer.py  test_transformer.py
