
### newer UV format
[project]
name = "gscrib"
version = "1.1.1"
description = "Supercharge G-code with Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy >=2.3.0",
    "pydantic >=2.10.0",
    "pyserial >=3.5.0",
    "scipy >=1.16.0",
    "typeguard >=4.4.0"
]
license = "GPL-3.0-only"
keywords = ["G-code", "Python", "G-code transformer"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pylint>=3.3.0",
    "pre-commit>=4.1.0",
    "mock>=5.2.0"
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
typeguard-packages = "gscrib"

[tool.pylint.messages_control]
disable = ["C", "R"]

[tool.pylint.reports]
output-format = "colorized"
