[tool.poetry]
name = "gscrib"
version = "1.2.0"
description = "Supercharge G-code with Python"
authors = ["Joan Sala <contact@joansala.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/joansalasoler/gscrib"
repository = "https://github.com/joansalasoler/gscrib"
documentation = "https://gscrib.readthedocs.io"
keywords = ["G-code", "Python", "G-code transformer"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=2.0.0,<3.0"
opencv-python = ">=4.10.0,<5.0"
pyserial = ">=3.5.0,<4.0"
scikit-image = ">=0.23.0,<1.0"
scipy = ">=1.14.0,<2.0"
typeguard = ">=4.3.0,<5.0"

[tool.poetry.group.dev.dependencies]
mock = "~5.2.0"
pre-commit = "~4.5.1"
pylint = "~4.0.4"
pytest = "~9.0.2"
pytest-cov = "~7.0.0"
tox = "~4.34.1"
mypy = "~1.19.1"
deptry = "^0.24.0"

[tool.poetry.group.docs.dependencies]
Sphinx = "~8.1.0"
sphinx-copybutton = "~0.5.0"
sphinx-rtd-theme = "~3.0.0"
myst-parser = "~4.0.0"
docutils = "~0.21.0"

[build-system]
requires = ["poetry-core", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
source = ["gscrib"]
branch = true

[tool.coverage.report]
exclude_also = ["pragma: no cover"]
show_missing = true
skip_empty = true

[tool.pytest.ini_options]
typeguard-packages = "gscrib"
pythonpath = ["."]

[tool.pylint.main]
ignore = ["gscrib/printrun"]

[tool.pylint.messages_control]
disable = ["C", "R"]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.typecheck]
generated-members = "cv.*"

[tool.deptry]
known_first_party = ["gscrib"]

[tool.mypy]
files = "gscrib"
ignore_missing_imports = true
